Bug 486573 - You're inappropriately able to resize panel widgets' floating popups from edges right next to a screen edge
Summary: You're inappropriately able to resize panel widgets' floating popups from edg...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 6.0.4
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 487943 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-05-04 13:45 UTC by kde-bugzilla.jcyjs
Modified: 2024-10-16 14:48 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
A video demonstrating how to reproduce the bug. (3.73 MB, video/webm)
2024-05-04 13:45 UTC, kde-bugzilla.jcyjs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kde-bugzilla.jcyjs 2024-05-04 13:45:18 UTC
Created attachment 169189 [details]
A video demonstrating how to reproduce the bug.

SUMMARY
Application Launcher, Wifi applet, calendar applet and other applets on the panel don't remember their position.

STEPS TO REPRODUCE
1. Install latest Fedora 40 KDE spin in a VM.
2. Setup an administrator/normal user and log in.
3. Open kickoff and increase its size from the right hand side. Now decrease it's size from the left hand side so that now its position above the panel is different from the default.
4. Close kickoff and reopen.

OBSERVED RESULT
Kickoff doesn't remember its position above the panel and goes back to the default left hand side.

EXPECTED RESULT
Kickoff remembers its position and remains where its position had been set previously.

SOFTWARE/OS VERSIONS
Windows:
macOS: 
Linux/KDE Plasma: Fedora 40
(available in About System)
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2024-05-05 04:09:07 UTC
This is intentional, but it shouldn't be able to happen at all; the ability to resize from an edge touching a screen edge is the thing that's a bug! We should fix that. I can reproduce it with current git master.
Comment 2 kde-bugzilla.jcyjs 2024-05-05 09:47:11 UTC
(In reply to Nate Graham from comment #1)
> This is intentional, but it shouldn't be able to happen at all; the ability
> to resize from an edge touching a screen edge is the thing that's a bug! We
> should fix that. I can reproduce it with current git master.

What do the launcher (and other widgets) follow to decide their starting point? If I have a panel of custom width (smaller than fill width) then kickoff used to start from the left hand side of the panel's starting point in 5.27. If I understand your reply correctly then is the inability of being able to resize a widget touching the screen edge from that edge going to fix the starting point problem?
Comment 3 Nate Graham 2024-06-17 16:52:59 UTC
*** Bug 487943 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2024-10-02 23:20:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1204
Comment 5 Nate Graham 2024-10-16 14:48:54 UTC
Git commit e747cc12360b56adcdde717dbe88c174df8f4c43 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 16/10/2024 at 14:48.
Pushed by ngraham into branch 'master'.

Do not allow resizing applet popups from borders on a screen or panel
FIXED-IN: 6.3.0

M  +2    -4    src/plasmaquick/appletpopup.cpp
M  +32   -9    src/plasmaquick/popupplasmawindow.cpp
M  +7    -0    src/plasmaquick/popupplasmawindow.h

https://invent.kde.org/plasma/libplasma/-/commit/e747cc12360b56adcdde717dbe88c174df8f4c43