Do not allow to resize applet popups from borders nearby screen/panel

BUG:486573